Add member to workspace api in progress
